gcc/testsuite/gdc.test/compilable/test12979a.d
void parse()
{
    asm pure nothrow @nogc @trusted {}
    asm @safe {}
}
