gcc/testsuite/gdc.test/fail_compilation/failsafec.d

void delegate() @system sysdelegate;

@safe
void callingsystem()
{
    sysdelegate();
}

